--- a/src/main/webapp/styles/less/wm-mobile-widgets.less
+++ b/src/main/webapp/styles/less/wm-mobile-widgets.less
@@ -44,6 +44,7 @@
         overflow-y: auto;
         overflow-x: hidden;
         box-sizing: content-box;
+        margin-left: -5px;
       }
     }
   }
